--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,1 +1,3 @@
-no
+<h1>404</h1>
+<h3>opssss. A ocurrido un error</h3>
+<h4>No encontramos esta pagina, Si ingresaste la URL manualmente hacegurate de que este bien ecrita.</h4>
