--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -38,18 +38,18 @@
               Links
             </a>
             <ul class="dropdown-menu bgn" aria-labelledby="linksdrop">
-              <li><a class="dropdown-item text-muted font-weight-bold" href="" target="_blank">Invite
+              <li><a class="dropdown-item text-muted font-weight-bold" href="https://discord.com/api/oauth2/authorize?client_id=933860473068195900&permissions=8&scope=bot" target="_blank">Invite
                   Bot</a>
               </li>
-              <li><a class="dropdown-item text-muted font-weight-bold" href="" target="_blank">Support
+              <li><a class="dropdown-item text-muted font-weight-bold" href="https://discord.gg/PatBCfNs5D" target="_blank">Support
                   Server</a></li>
               <li><a class="dropdown-item text-muted font-weight-bold" href="/faq">FAQ</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
-              <li><a class="dropdown-item text-muted font-weight-bold" href="https://github.com/Hadi-Koubeissi"
+              <li><a class="dropdown-item text-muted font-weight-bold" href="https://github.com/kingdevag/AkazaDBot"
                   target="_blank">Github Oficial</a></li>
-              <li><a class="dropdown-item text-muted font-weight-bold" href="">Ver Documentacion</a></li>
+              <li><a class="dropdown-item text-muted font-weight-bold" href="https://discordpy.readthedocs.io/en/stable/">Ver Documentacion</a></li>
             </ul>
           </li>
         </ul>
@@ -107,9 +107,9 @@
       </h3>
       <div class="float-right mr-5">
         <ul class="social-icons">
-          <li><a href="" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
-          <li><a href="" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
-          <li><a href="" class="social-icon"> <i class="fa fa-github"></i></a></li>
+          <li><a href="https://www.facebook.com/profile.php?id=100042420924095" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
+          <li><a href="https://twitter.com/K1ngAg" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
+          <li><a href="https://github.com/kingdevag" class="social-icon"> <i class="fa fa-github"></i></a></li>
         </ul>
         <div style="transform: none;"><a href="https://discord.com/api/oauth2/authorize?client_id=933860473068195900&permissions=8&scope=bot" target="_blank"> <button class="add_to_discord" h><svg width="30"
                 height="35" viewBox="0 0 30 35" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -126,7 +126,7 @@
           <div class="">
             <p style="font-size: 19px; padding: 0px; margin: 0px;"><a href="https://github.com/kingdevag"
                 style="text-decoration: none; color: white;">Hecho con 💖 by K1ngDev</a></br>Akaza ©
-                2021. Todos
+                2022. Todos
                 Derechos reservados.</br>[<a href="/license"><b>Terminos de uso</b></a>]</p>
           </div>
         </div>
