--- a/app/templates/team.html
+++ b/app/templates/team.html
@@ -4,70 +4,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css')}}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css')}}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" href="../assets/favicon.png">
-    <title>Hbot</title>
+    <link rel="icon" href="{{url_for ('static', filename = './img/bot.png')}}">
+    <title>Akaza</title>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid container">
-            <a class="navbar-brand" href="/">
-                <img src="../assets/bot.png" alt="" width="50" height="50" class="rounded-circle"> &nbsp;
-                <span>Hbot</span>
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="./commands.html">Commands</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#/">Staff</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="linksdrop" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            Links
-                        </a>
-                        <ul class="dropdown-menu bgn" aria-labelledby="linksdrop">
-                            <li><a class="dropdown-item text-muted font-weight-bold" href="" target="_blank">Invite
-                                    Bot</a>
-                            </li>
-                            <li><a class="dropdown-item text-muted font-weight-bold" href="" target="_blank">Support
-                                    Server</a></li>
-                            <li><a class="dropdown-item text-muted font-weight-bold" href="./faq.html">FAQ</a></li>
-                            </li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item text-muted font-weight-bold"
-                                    href="https://github.com/Hadi-Koubeissi" target="_blank">Official Github</a></li>
-                            <li><a class="dropdown-item text-muted font-weight-bold" href="">View
-                                    Documentation</a></li>
-                        </ul>
-                    </li>
+          <a class="navbar-brand" href="/">
+            <img src="{{url_for ('static', filename = './img/bot.png')}}" alt="" width="50" height="50" class="rounded-circle"> &nbsp; <span>Akaza</span>
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#/">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/commands">Commands</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/team">Staff</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="linksdrop" role="button" data-bs-toggle="dropdown"
+                  aria-expanded="false">
+                  Links
+                </a>
+                <ul class="dropdown-menu bgn" aria-labelledby="linksdrop">
+                  <li><a class="dropdown-item text-muted font-weight-bold" href="https://discord.com/api/oauth2/authorize?client_id=933860473068195900&permissions=8&scope=bot" target="_blank">Invite
+                      Bot</a>
+                  </li>
+                  <li><a class="dropdown-item text-muted font-weight-bold" href="https://discord.gg/PatBCfNs5D" target="_blank">Support
+                      Server</a></li>
+                  <li><a class="dropdown-item text-muted font-weight-bold" href="/faq">FAQ</a></li>
+                  <li>
+                    <hr class="dropdown-divider">
+                  </li>
+                  <li><a class="dropdown-item text-muted font-weight-bold" href="https://github.com/kingdevag/AkazaDBot"
+                      target="_blank">Github Oficial</a></li>
+                  <li><a class="dropdown-item text-muted font-weight-bold" href="https://discordpy.readthedocs.io/en/stable/">Ver Documentacion</a></li>
                 </ul>
-                <div class="d-flex ml-auto" id="headerlogin">
-                    <li class="nav-item" style="list-style: none;">
-                        <a class="nav-link btn btn-outline-secondary login" href="/login">Login</a>
-                    </li>
-                </div>
+              </li>
+            </ul>
+            <div class="d-flex ml-auto" id="headerlogin">
+              <li class="nav-item" style="list-style: none;">
+                <a class="nav-link btn btn-outline-secondary login" href={{oauth_uri}}>Login</a>
+              </li>
             </div>
+          </div>
         </div>
-    </nav>
+      </nav>
 
     <div class="container text-center">
-        <h3 style="color: #ffffff; margin: 20px">Dev Team</h3>
+        <h3 style="color: #ffffff; margin: 20px">Equipo de Desarrollo</h3>
         <hr style="border: 1px solid #ffffff">
         <div class="row equal d-flex justify-content-center" style="margin: 20px" id="owners_list">
         </div>
@@ -78,9 +74,9 @@
             <div class="row d-flex justify-content-center">
                 <div class="">
                     <p style="font-size: 19px; padding: 0px; margin: 0px;"><a href="https://github.com/Hadi-Koubeissi"
-                            style="text-decoration: none; color: white;">Made with 💖 by Hadi Koubeissi</a></br>Hbot ©
-                        2021. All
-                        rights reserved.</br>[<a href="./license.html"><b>Terms Of Use</b></a>]</p>
+                            style="text-decoration: none; color: white;">Hecho con 💖 by K1ngDev</a></br>Akaza ©
+                            2022. Todos
+                            Derechos reservados.</br>[<a href="./license.html"><b>Terminos de uso</b></a>]</p>
                 </div>
             </div>
         </div>
@@ -91,8 +87,8 @@
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="../js/main.js"></script>
-    <script src="../js/team.js"></script>
+    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/team.js') }}"></script>
 </body>
 
 </html>
