--- a/app/templates/commands.html
+++ b/app/templates/commands.html
@@ -79,36 +79,243 @@
         <br>
         <div id="myCmd">
             <br>
-            <button type="button" class="collapsible">setprefix<span> - Check/Changes bot's prefix</span></button>
+            <button type="button" class="collapsible">setprefix<span> - Cambia o establece un Prefijo para el Bot</span></button>
             <div class="content">
-                <h4 style="color: rgb(169, 247, 247);">Category:</h4>
-                <p style="color: aqua;">Administration</p>
-                <h4 style="color: #cccccc;">Usage:</h4>
-                <p>Hprefix</p>
-                <h4 style="color: #cccccc;">Examples:</h4>
-                <p>Hprefix !</p>
+                <h4 style="color: rgb(169, 247, 247);">Categoria:</h4>
+                <p style="color: aqua;">Administracion</p>
+                <h4 style="color: #cccccc;">Uso:</h4>
+                <p>!setprefix</p>
+                <h4 style="color: #cccccc;">Ejemplos:</h4>
+                <p>!setprefix !</p>
             </div>
             <br>
             <br>
-            <button type="button" class="collapsible">help<span> - Check the commands list</span></button>
+            <button type="button" class="collapsible">setwellcome<span> - Cambia o establece un Canal de bienvenidas</span></button>
             <div class="content">
-                <h4 style="color: rgb(169, 247, 247);">Category:</h4>
+                <h4 style="color: rgb(169, 247, 247);">Categoria:</h4>
+                <p style="color: aqua;">Administracion</p>
+                <h4 style="color: #cccccc;">Uso:</h4>
+                <p>!setwellcome</p>
+                <h4 style="color: #cccccc;">Ejemplos:</h4>
+                <p>!setwellcome #bienvenida</p>
+                <p>!setwellcome #general</p>
+            </div>
+            <br>
+            <br>
+            <button type="button" class="collapsible">help<span> - Ve informacion o la lista de comandos</span></button>
+            <div class="content">
+                <h4 style="color: rgb(169, 247, 247);">Categoria:</h4>
                 <p style="color: rgb(19, 182, 160);">General</p>
-                <h4 style="color: #cccccc;">Usage:</h4>
-                <p>Hhelp</p>
-                <h4 style="color: #cccccc;">Examples:</h4>
-                <p>Hhelp setprefix</p>
+                <h4 style="color: #cccccc;">Uso:</h4>
+                <p>!help</p>
+                <h4 style="color: #cccccc;">Ejemplos:</h4>
+                <p>!help setprefix</p>
+                <p>!help</p>
             </div>
             <br>
             <br>
-            <button type="button" class="collapsible">reaction role<span> - add a reaction role</span></button>
+            <button type="button" class="collapsible">invite<span> - Crea un invitacion del bot</span></button>
             <div class="content">
-                <h4 style="color: rgb(169, 247, 247);">Category:</h4>
-                <p style="color: rgb(242, 44, 232);">Premium</p>
-                <h4 style="color: #cccccc;">Usage:</h4>
-                <p>Hrr</p>
-                <h4 style="color: #cccccc;">Examples:</h4>
-                <p>Hrr {messageID} {roleID} {emojiID}</p>
+                <h4 style="color: rgb(169, 247, 247);">Categoria:</h4>
+                <p style="color: rgb(19, 182, 160);">Otros</p>
+                <h4 style="color: #cccccc;">Uso:</h4>
+                <p>!help</p>
+                <h4 style="color: #cccccc;">Ejemplos:</h4>
+                <p>!invite</p>
+            </div>
+            <br>
+            <br>
+            <button type="button" class="collapsible">info<span> - Ve informacion sobre el Servidor o el Bot</span></button>
+            <div class="content">
+                <h4 style="color: rgb(169, 247, 247);">Categoria:</h4>
+                <p style="color: rgb(19, 182, 160);">General</p>
+                <h4 style="color: #cccccc;">Uso:</h4>
+                <p>!info</p>
+                <h4 style="color: #cccccc;">Ejemplos:</h4>
+                <p>!info</p>
+                <p>!info server</p>
+            </div>
+            <br>
+            <br>
+            <button type="button" class="collapsible">userinfo<span> - Ve informacion sobre algun Usuario</span></button>
+            <div class="content">
+                <h4 style="color: rgb(169, 247, 247);">Categoria:</h4>
+                <p style="color: rgb(19, 182, 160);">General</p>
+                <h4 style="color: #cccccc;">Uso:</h4>
+                <p>!userinfo</p>
+                <h4 style="color: #cccccc;">Ejemplos:</h4>
+                <p>!info</p>
+                <p>!info @♞!i~𝞚ℝⱮ𝞓𝞟🅓𝞨;..♟#7094</p>
+            </div>
+            <br>
+            <br>
+            <button type="button" class="collapsible">name_edit<span> - Cambia el nombre a tus amigos</span></button>
+            <div class="content">
+                <h4 style="color: rgb(169, 247, 247);">Categoria:</h4>
+                <p style="color: orange;">Diversion</p>
+                <h4 style="color: #cccccc;">Uso:</h4>
+                <p>!name_edit</p>
+                <h4 style="color: #cccccc;">Ejemplos:</h4>
+                <p>!name_edit</p>
+                <p>!name_edit @♞!i~𝞚ℝⱮ𝞓𝞟🅓𝞨;..♟#7094 Hola</p>
+            </div>
+            <br>
+            <br>
+            <button type="button" class="collapsible">secret<span> - puedes mandar un mensaje sin que nadie sepa que fuiste tu</span></button>
+            <div class="content">
+                <h4 style="color: rgb(169, 247, 247);">Categoria:</h4>
+                <p style="color: orange;">Diversion</p>
+                <h4 style="color: #cccccc;">Uso:</h4>
+                <p>!secret</p>
+                <h4 style="color: #cccccc;">Ejemplos:</h4>
+                <p>!secret</p>
+                <p>!secret Yo agrege a Akaza al sevidor :D</p>
+            </div>
+            <br>
+            <br>
+            <button type="button" class="collapsible">subs<span> - consulta los Subscriptores de algun Youtuber</span></button>
+            <div class="content">
+                <h4 style="color: rgb(169, 247, 247);">Categoria:</h4>
+                <p style="color: red;">Redes</p>
+                <h4 style="color: #cccccc;">Uso:</h4>
+                <p>!userinfo</p>
+                <h4 style="color: #cccccc;">Ejemplos:</h4>
+                <p>!info</p>
+                <p>!info @♞!i~𝞚ℝⱮ𝞓𝞟🅓𝞨;..♟#7094</p>
+            </div>
+            <br>
+            <br>
+            <button type="button" class="collapsible">youtube<span> - Busca un video de Youtube</span></button>
+            <div class="content">
+                <h4 style="color: rgb(169, 247, 247);">Categoria:</h4>
+                <p style="color: red;">Redes</p>
+                <h4 style="color: #cccccc;">Uso:</h4>
+                <p>!youtube</p>
+                <h4 style="color: #cccccc;">Ejemplos:</h4>
+                <p>!youtube KingDEV</p>
+            </div>
+            <br>
+            <br>
+            <button type="button" class="collapsible">sumar<span> - Suma dos numeros como si fuera una calculadora</span></button>
+            <div class="content">
+                <h4 style="color: rgb(169, 247, 247);">Categoria:</h4>
+                <p style="color: red;">Matematicas</p>
+                <h4 style="color: #cccccc;">Uso:</h4>
+                <p>!sumar</p>
+                <h4 style="color: #cccccc;">Ejemplos:</h4>
+                <p>!sumar 8 14</p>
+            </div>
+            <br>
+            <br>
+            <button type="button" class="collapsible">restar<span> - Resta dos numeros como si fuera una calculadora</span></button>
+            <div class="content">
+                <h4 style="color: rgb(169, 247, 247);">Categoria:</h4>
+                <p style="color: red;">Matematicas</p>
+                <h4 style="color: #cccccc;">Uso:</h4>
+                <p>!restar</p>
+                <h4 style="color: #cccccc;">Ejemplos:</h4>
+                <p>!restar 22 14</p>
+            </div>
+            <br>
+            <br>
+            <button type="button" class="collapsible">multiplicar<span> - Multiplica dos numeros como si fuera una calculadora</span></button>
+            <div class="content">
+                <h4 style="color: rgb(169, 247, 247);">Categoria:</h4>
+                <p style="color: red;">Matematicas</p>
+                <h4 style="color: #cccccc;">Uso:</h4>
+                <p>!multiplicar</p>
+                <h4 style="color: #cccccc;">Ejemplos:</h4>
+                <p>!mul 8 22</p>
+            </div>
+            <br>
+            <br>
+            <button type="button" class="collapsible">dividir<span> - Divide dos numeros como si fuera una calculadora</span></button>
+            <div class="content">
+                <h4 style="color: rgb(169, 247, 247);">Categoria:</h4>
+                <p style="color: red;">Matematicas</p>
+                <h4 style="color: #cccccc;">Uso:</h4>
+                <p>!dividir</p>
+                <h4 style="color: #cccccc;">Ejemplos:</h4>
+                <p>!dividir 3 8</p>
+            </div>
+            <br>
+            <br>
+            <button type="button" class="collapsible">join<span> - Hace que le Bot entre a tu canal de Voz</span></button>
+            <div class="content">
+                <h4 style="color: rgb(169, 247, 247);">Categoria:</h4>
+                <p style="color: purple;">Musica</p>
+                <h4 style="color: #cccccc;">Uso:</h4>
+                <p>!join</p>
+                <h4 style="color: #cccccc;">Ejemplos:</h4>
+                <p>!join</p>
+            </div>
+            <br>
+            <br>
+            <button type="button" class="collapsible">leave<span> - Hace que le Bot se salga de tu canal de Voz</span></button>
+            <div class="content">
+                <h4 style="color: rgb(169, 247, 247);">Categoria:</h4>
+                <p style="color: purple;">Musica</p>
+                <h4 style="color: #cccccc;">Uso:</h4>
+                <p>!leave</p>
+                <h4 style="color: #cccccc;">Ejemplos:</h4>
+                <p>!leave</p>
+            </div>
+            <br>
+            <br>
+            <button type="button" class="collapsible">queue<span> - Verifica si hay canciones en la cola</span></button>
+            <div class="content">
+                <h4 style="color: rgb(169, 247, 247);">Categoria:</h4>
+                <p style="color: purple;">Musica</p>
+                <h4 style="color: #cccccc;">Uso:</h4>
+                <p>!queue</p>
+                <h4 style="color: #cccccc;">Ejemplos:</h4>
+                <p>!queue</p>
+            </div>
+            <br>
+            <br>
+            <button type="button" class="collapsible">play<span> - Reproduce una cancion</span></button>
+            <div class="content">
+                <h4 style="color: rgb(169, 247, 247);">Categoria:</h4>
+                <p style="color: purple;">Musica</p>
+                <h4 style="color: #cccccc;">Uso:</h4>
+                <p>!play</p>
+                <h4 style="color: #cccccc;">Ejemplos:</h4>
+                <p>!play https://www.youtube.com/watch?v=fTH71AAxXmM</p>
+                <p>!play The White Stripes - Fell In Love With A Girl</p>
+            </div>
+            <br>
+            <br>
+            <button type="button" class="collapsible">skip<span> - Crea una votacion para saltar la cancion que se este reproduciendo</span></button>
+            <div class="content">
+                <h4 style="color: rgb(169, 247, 247);">Categoria:</h4>
+                <p style="color: purple;">Musica</p>
+                <h4 style="color: #cccccc;">Uso:</h4>
+                <p>!skip</p>
+                <h4 style="color: #cccccc;">Ejemplos:</h4>
+                <p>!play skip</p>
+              <br>
+              <br>
+            <button type="button" class="collapsible">game<span> - Crea un juego de tres en raya</span></button>
+            <div class="content">
+                <h4 style="color: rgb(169, 247, 247);">Categoria:</h4>
+                <p style="color: orange;">Diversion</p>
+                <h4 style="color: #cccccc;">Uso:</h4>
+                <p>!game</p>
+                <h4 style="color: #cccccc;">Ejemplos:</h4>
+                <p>!game @♞!i~𝞚ℝⱮ𝞓𝞟🅓𝞨;..♟#7094 @Akaza#2694</p>
+            </div>
+            <br>
+            <br>
+            <button type="button" class="collapsible">lugar<span> - Agrega una marca en el juego de tres en raya que creaste con !game</span></button>
+            <div class="content">
+                <h4 style="color: rgb(169, 247, 247);">Categoria:</h4>
+                <p style="color: orange;">Diversion</p>
+                <h4 style="color: #cccccc;">Uso:</h4>
+                <p>!game</p>
+                <h4 style="color: #cccccc;">Ejemplos:</h4>
+                <p>!lugar 4</p>
+            </div>
+            <br>
             </div>
         </div>
     </div>
