--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,10 +4,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="El Mejor Bot para Discord">
+  <meta name="theme-color" content="#272d30">
+  <meta name="MobileOptimized" content="width">
+  <meta name="HandheldFriendly" content="true">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css')}}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css')}}">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="icon" href="{{url_for ('static', filename = './img/bot.png')}}">
+  <link rel="shortcut icon" type="image/png" href="{{url_for ('static', filename = './img/bot.png')}}">
+  <link rel="apple-touch-icon" href="{{ url_for('static', filename='img/icons/icon128.png') }}">
+  <link rel="apple-touch-startup-image" href="{{url_for ('static', filename = './img/icons/icon1024.png')}}">
+  <link rel="manifest" href="{{url_for('static', filename='manifest.json')}}">
   <title>AKAZA</title>
 </head>
 
@@ -139,6 +150,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 
 </html>
