--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -150,7 +150,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <script>if ("serviceWorker" in navigator) {
+              navigator.serviceWorker.register("src/sw.js");
+    }
+    </script>
 </body>
 
 </html>
